<resources>
    <string name="app_name">Calculator</string>
    <string name="NumberToCalculate">Number</string>
    <string name="btnSum">+</string>
    <string name="btnRest">-</string>
    <string name="btnMult">*</string>
    <string name="btnDiv">/</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="delAll">AC</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="delOne"><![CDATA[<--]]></string>
    <string name="btnDelOne"><![CDATA[<--]]></string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnPoint">.</string>
    <string name="btnCero">0</string>
    <string name="btnNeg">-</string>
    <string name="resultTextView">resultTextView</string>
    <string name="resultTexxtView">0</string>
    <string name="sumbtn">+</string>
    <string name="sevenbtn">7</string>
    <string name="fourbtn">4</string>
    <string name="onebtn">1</string>
    <string name="pointbtn">.</string>
    <string name="restbtn">-</string>
    <string name="eightbtn">8</string>
    <string name="fivebtn">5</string>
    <string name="twobtn">2</string>
    <string name="cerobtn">0</string>
    <string name="multbtn">*</string>
    <string name="ninebtn">9</string>
    <string name="sixbtn">6</string>
    <string name="threebtn">3</string>
    <string name="negposbtn">+/-</string>
    <string name="divbtn">/</string>
    <string name="del_allbtn">AC</string>
    <string name="delbtn"><![CDATA[<-]]></string>
    <string name="samebtn">=</string>
</resources>
