<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alberto.ioscalculator.MainActivity"
    android:focusableInTouchMode="true"
    android:weightSum="1">

    <TextView
        android:id="@+id/numberToCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/NumberToCalculate"
        android:layout_margin="10dp"
        android:textAlignment="textEnd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/sumBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnSum"/>

        <Button
            android:id="@+id/restBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnRest"/>

        <Button
            android:id="@+id/multBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnMult"/>

        <Button
            android:id="@+id/divBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnDiv"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnSeven"/>

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnEight"/>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnNine"/>

        <Button
            android:id="@+id/delAll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/delAll"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnFour"/>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnFive"/>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnSix"/>

        <Button
            android:id="@+id/btnDelOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnDelOne"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="20sp"
                android:text="@string/btnOne" />

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btnPoint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btnTwo"
                android:layout_marginBottom="20sp"/>

            <Button
                android:id="@+id/btnCero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btnCero"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <Button
                android:id="@+id/btnThree"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btnThree"
                android:layout_marginBottom="20sp"/>

            <Button
                android:id="@+id/btnNeg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btnNeg"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSame"
                android:layout_width="wrap_content"
                android:layout_height="115dp"
                android:text="="/>


        </LinearLayout>



    </LinearLayout>


</LinearLayout>
