<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6">

    <TextView
        android:id="@+id/resultado"
        android:text="@string/resultTexxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="50dp"
        android:gravity="right|center"
        android:padding="5dp"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal"
        android:weightSum="4"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/sumBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/sumbtn"
                android:layout_weight="1"
                android:textSize="50sp" />

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/sevenbtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnFour"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/fourbtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnOne"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/onebtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/pointbtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/restBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/restbtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnEight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/eightbtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnFive"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/fivebtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/twobtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnCero"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/cerobtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/multBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/multbtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnNine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/ninebtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnSix"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/sixbtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnThree"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/threebtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnNeg_pos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/negposbtn"
                android:layout_weight="1"
                android:textSize="30sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/divBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/divbtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnAC"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/del_allbtn"
                android:layout_weight="1"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/delbtn"
                android:layout_weight="1"
                android:textSize="50sp"/>

            <Button
                android:id="@+id/btnSame"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/samebtn"
                android:layout_weight="2"
                android:textSize="50sp"/>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>